--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,16 @@ source:
 build:
   number: 4
   script: "{{ PYTHON }} -m pip install . -vv"
+  
+build_platform:
+  osx_arm64: osx_64
 
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy >=1.16.0                         # [build_platform != target_platform]
   host:
     - python
     - pip
@@ -24,9 +30,7 @@ requirements:
     - python
     - {{ pin_compatible('numpy') }}
 
-test:
-  imports:
-    - s_gd2
+test: native_and_emulated
 
 about:
   home: https://github.com/jxz12/s_gd2
