--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "s_gd2" %}
-{% set version = "1.7" %}
+{% set version = "1.8.1" %}
 
 package:
   name: {{ name|lower }}
@@ -10,7 +10,7 @@ source:
   sha256: bc69e36bac679dd968056dce3aaf5d3ff107b2ea4ff99364791ed7f8246807b0
 
 build:
-  number: 4
+  number: 1
   script: "{{ PYTHON }} -m pip install . -vv"
   
 build_platform:
@@ -22,10 +22,12 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy >=1.16.0                         # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
   host:
     - python
     - pip
     - numpy >=1.16.0
+    - cython
   run:
     - python
     - {{ pin_compatible('numpy') }}
