--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,16 @@ source:
   sha256: 977597da6d7f6f4b7a479732e374e48d34369e047090720c5d78ca3ca59dc269
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy >=1.16.0                         # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
   host:
     - python
     - pip
